<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_parent"
        android:title="@string/menu_parent"
        android:titleCondensed="@string/menu_parent_condensed"
        android:icon="@drawable/ic_menu_up"
        android:showAsAction="always|withText" />
    <item
        android:id="@+id/menu_home"
        android:title="@string/browse_home"
        android:icon="@drawable/ic_menu_home"
        android:showAsAction="always|withText" />
    <item
        android:id="@+id/menu_set_home"
        android:title="@string/menu_set_home"
        android:icon="@drawable/ic_menu_set_as"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_libraries"
        android:title="@string/browse_libraries"
        android:icon="@drawable/ic_menu_library"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_text_size"
        android:title="@string/menu_browse_text_size"
        android:icon="@drawable/ic_menu_font_size"
        android:showAsAction="ifRoom|withText"> 
        <menu>
            <item android:id="@+id/menu_size_small" android:title="@string/size_small"></item>
            <item android:id="@+id/menu_size_medium" android:title="@string/size_medium"></item>
            <item android:id="@+id/menu_size_large" android:title="@string/size_large"></item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_refresh_directory"
        android:title="@string/refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:visible="false" />
</menu>
