<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton
        android:id="@+id/button_skip_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_button_skip_backward"
        android:src="@drawable/ic_media_skip_backward" />

    <ImageButton
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_button_stop"
        android:src="@drawable/ic_media_playback_stop" />

    <ImageButton
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_button_play_pause"
        android:src="@drawable/ic_media_playback_start" />

    <ImageButton
        android:id="@+id/button_skip_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_button_skip_forward"
        android:src="@drawable/ic_media_skip_forward" />
</merge>