<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fastScrollEnabled="true" />
        <TextView
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/emptyplaylist"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@android:style/ButtonBar">
        <ImageButton
            android:id="@+id/playlist_button_shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_shuffle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:src="@drawable/ic_mp_shuffle_off_btn" />
        <ImageButton
            android:id="@+id/playlist_button_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_repeat"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:src="@drawable/ic_mp_repeat_off_btn" />
    </LinearLayout>
</LinearLayout>
